--- a/main.css
+++ b/main.css
@@ -1,4 +1,3 @@
-/* main.css, which used for index.html file, needed for working with main part of the page */
 
 main {
   padding: 20px 0;
@@ -13,37 +12,26 @@ main {
 .frontPage h1 {
   color: #34516c;
   font-weight: 650;
-  font-size: 4.2rem;
+  font-size: 3.2rem;
   margin-bottom: 10px;
 }
 
 .frontPage h2 {
   color: #34516c;
   font-weight: 650;
-  font-size: 3rem;
+  font-size: 2.8rem;
   margin: 30px 0 10px 0;
 }
-
-main .videoPart h1,
-.framePart h1 {
-  font-size: 2.6rem;
-  color: #F2BE1A;
-  padding: 20px 0 10px 0;
-
+.socialNetworksTable ul{
+  display: flex;
+  flex-direction: row;
+  font-size: 3rem;
+  list-style-type: none;
 }
-
-main .videoPart video {
-  width: 100%;
-  max-width: 780px;
-
+.teamTable ul{
+  font-size: 3rem;
+  list-style-type: none;
 }
-
-main .framePart iframe {
-  width: 100%;
-  min-height: 330px;
-
-}
-
 .frontPage p {
   font-size: 1.7rem;
 }
@@ -56,15 +44,6 @@ main .framePart iframe {
   .frontPage p {
     font-size: 1.8rem;
   }
-
-  main .videoPart h1,
-  .framePart h1 {
-    font-size: 3.2rem;
-  }
-
-  main .videoPart video {
-    max-width: 820px;
-  }
 }
 
 @media only screen and (max-width: 768px) {
@@ -74,11 +53,6 @@ main .framePart iframe {
 
   .frontPage p {
     font-size: 1.5rem;
-  }
-
-  main .videoPart h1,
-  .framePart h1 {
-    font-size: 2.2rem;
   }
 
 }
