--- a/header.css
+++ b/header.css
@@ -1,6 +1,6 @@
 /* header.css, header, which used for every page, and also includes some basic parts for css styling */
 
-* {
+*, *::before, *::after {
   font-family: arial, sans-serif;
   font-size: 62.5%;
   margin: 0;
@@ -64,10 +64,6 @@
 
 
 @media only screen and (max-width: 1192px) {
-  .header-main-logo img {
-    width: 240px;
-    height: 89px;
-  }
 
   .header-main-nav ul li,
   .header-main-name {
@@ -93,7 +89,7 @@
     display: block;
     width: 50px;
     height: 50px;
-    background-image: url('../png/burger-menu.png');
+    background-image: url('burger-menu.png');
     background-size: cover;
   }
 
