--- a/main.css
+++ b/main.css
@@ -9,6 +9,14 @@ main {
   min-height: 80vh;
 }
 
+
+
+.frontPage button{
+  font-size: 2rem;
+  padding: 15px;
+  border-color: blue;
+  margin: 15px 0px 15px 0px;
+}
 .frontPage h1 {
   color: #34516c;
   font-weight: 650;
