--- a/css/header.css
+++ b/css/header.css
@@ -89,7 +89,7 @@
     display: block;
     width: 50px;
     height: 50px;
-    background-image: url('burger-menu.png');
+    background-image: url('/burger-menu.png');
     background-size: cover;
   }
 
