--- a/css/header.css
+++ b/css/header.css
@@ -10,13 +10,13 @@
 
 .logoList a {
   text-decoration: none;
-  color: white;
+  color: black;
 }
 
 .header-main {
   width: 100%;
   height: 130px;
-  background-color: #be1622;
+  background-color: #acb3b8;
   display: flex;
   justify-content: space-between;
 }
@@ -59,9 +59,14 @@
   align-self: center;
   font-weight: 700;
   font-size: 3.2rem;
-  color: white;
+  color: black;
 }
 
+body {
+  background-image: url('/background.jpg');
+  background-size: cover;
+  background-attachment: fixed;
+}
 
 @media only screen and (max-width: 1192px) {
 
@@ -109,13 +114,14 @@
   .burger-menu ul li {
     margin: 0 20px;
     list-style-type: none;
+    color: black;
   }
 
   .burger-menu ul li a {
     display: block;
     font-size: 2rem;
     padding: 18px 0;
-    color: white;
+    color: black;
     text-decoration: none;
   }
 }
