--- a/css/header.css
+++ b/css/header.css
@@ -63,7 +63,7 @@
 }
 
 body {
-  background-image: url('/background.jpg');
+  background-image: url('/images/background.jpg');
   background-size: cover;
   background-attachment: fixed;
 }
