--- a/css/header.css
+++ b/css/header.css
@@ -1,7 +1,7 @@
 /* header.css, header, which used for every page, and also includes some basic parts for css styling */
 
 *, *::before, *::after {
-  font-family: arial, sans-serif;
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 62.5%;
   margin: 0;
   padding: 0;
@@ -57,8 +57,8 @@
   width: fit-content;
   margin-left: 15px;
   align-self: center;
-  font-weight: 700;
-  font-size: 3.2rem;
+  font-weight:lighter;
+  font-size: 2.6rem;
   color: black;
 }
 
