--- a/css/main.css
+++ b/css/main.css
@@ -33,6 +33,10 @@ main {
   width: 30%;
 }
 
+.PersonInfoPanel{
+  font-size: 2.3rem;
+}
+
 .socialNetworksTable ul{
   display: flex;
   flex-direction: row;
