--- a/css/main.css
+++ b/css/main.css
@@ -41,6 +41,7 @@ main {
   font-size: 2.3rem;
 }
 
+
 .socialNetworksTable ul{
   display: flex;
   flex-direction: row;
@@ -116,8 +117,13 @@ main {
   display: none;
 }
 
+#questionField{
+  list-style: none;
+}
+
+
 .PersonInfoPanel {
-  border: 2px solid #c90c0c;
+  border: 2px solid #d0c0f1;
   padding: 20px;
   margin: 20px;
   border-radius: 5px;
@@ -148,15 +154,16 @@ main {
   border: 1px solid rgb(255, 255, 255);
   padding: 5px;
   margin: 5px;
-  width: 200px;
 }
 
 #SeenQuestion {
   display: none;
 }
 
-
-
+.questionContainer .skipButton{
+ position: relative;
+ left: 80%;
+}
 
 #treasureHunts li {
   border: 1px solid black;
@@ -218,4 +225,3 @@ footer {
   padding: 15px 2%;
 }
 
-logo
