--- a/css/main.css
+++ b/css/main.css
@@ -22,8 +22,9 @@ main {
 .frontPage h1 {
   color: #34516c;
   font-weight: 650;
-  font-size: 3.2rem;
-  margin-bottom: 10px;
+  font-size: 6rem;
+  width: 65%;
+  margin: 2% 0px 3% 0px;
 }
 
 .frontPage h2 {
@@ -41,14 +42,25 @@ main {
   font-size: 2.3rem;
 }
 
-
 .socialNetworksTable ul{
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  
   align-items: center;
   list-style-type: none;
-  width: 100%;
+}
+
+.socialNetworksTable img {
+  width: 100px;
+  border:solid #b9c1ca;
+  border-radius: 1px;
+  transition: border-color 0.3s ease;
+
+}
+
+.socialNetworksTable img:hover {
+  border-color: #0056b3;
+  box-shadow: 0 0 5px rgba(0, 0, 255, 0.5);
 }
 .socialNetworksTable ul li{
   flex: 1;
