--- a/css/main.css
+++ b/css/main.css
@@ -80,6 +80,19 @@ main {
   font-size: 1.7rem;
 }
 
+
+.frontPage #buttonStart {
+  margin-right: 10px;
+    padding: 8px 16px;
+    background-color: #4caf50;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    box-shadow: 0 0 5px rgb(76, 175, 80);
+    font-size: 30px;
+}
+
 .errorMessagesSize {
   font-size: 3rem;
   margin: 15px 0px 15px 0px;
@@ -125,10 +138,6 @@ main {
   border-radius: 4px;
 }
 
-#SeenQuestion {
-  display: none;
-}
-
 #questionField{
   list-style: none;
 }
@@ -141,8 +150,6 @@ main {
   border-radius: 5px;
   box-shadow: 0 0 5px rgba(255, 0, 0, 0.66);
 }
-
-
 
 .trueButton,
 .falseButton,
@@ -189,14 +196,20 @@ main {
   box-shadow: 0 0 5px rgb(76, 175, 80);
 }
 #treasureHunts li:hover {
-  background-color: rgb(188, 22, 33);
-  box-shadow: 0 0 5px rgb(188, 22, 33);
+  background-color: rgb(243, 239, 239);
+  box-shadow: 0 0 5px rgb(249, 248, 248);
 
 }
 
 .treasureHuntFontSize {
   font-size: 3rem;
   margin: 30px 0px 30px 0px;
+  background-color: #4caf50;
+    color: rgb(0, 0, 0);
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    box-shadow: 0 0 5px rgb(76, 175, 80);
 }
 
 @media only screen and (max-width: 1192px) {
