--- a/css/main.css
+++ b/css/main.css
@@ -3,22 +3,12 @@ main {
   padding-bottom: 200px;
   display: flex;
   align-items: center;
-  margin: 1% 2%;
+  margin: 4% 2%;
   flex-direction: column;
   width: auto;
   min-height: 80vh;
 }
 
-.frontPage button{
-  font-size: 2rem;
-  padding: 15px;
-  border-color: #283e53;
-  margin: 15px 0px 15px 0px;
-  border-radius: 5px;
-  box-shadow: 0 0 10px rgb(40, 62, 83);
-  background-color: rgba(40, 62, 83, 0.35);
-
-}
 .frontPage h1 {
   color: #34516c;
   font-weight: 650;
@@ -80,9 +70,7 @@ main {
   font-size: 1.7rem;
 }
 
-
 .frontPage #buttonStart {
-  margin-right: 10px;
     padding: 8px 16px;
   background: linear-gradient(45deg, rgb(14, 4, 4), rgb(79, 187, 241));
     color: #ffffff;
@@ -91,6 +79,7 @@ main {
     cursor: pointer;
     box-shadow: 0 0 5px rgb(79, 187, 241);
     font-size: 30px;
+    text-decoration: none;
 }
 
 #buttonStart:hover{
@@ -277,7 +266,7 @@ footer {
 }
 
 #robot{
-  width:  200px;
+  width:200px;
 }
 
 @media only screen and (max-width: 768px) {
@@ -325,10 +314,6 @@ footer {
     font-size: 1.3rem;
   }
 
-  footer {
-    height: auto;
-    flex-wrap: wrap;
-  }
 }
 
 
