--- a/css/leaderboard.css
+++ b/css/leaderboard.css
@@ -3,15 +3,16 @@
 }
 
 table {
-    width: 100%;
-    /* Adjust the width as needed */
+    max-width: 50%;
     border-collapse: collapse;
 }
 
-th,
-td {
-    border: 5px solid rgb(54, 54, 54);
-    padding: 40px;
+td,
+th {
+    max-width: 200px;
+    overflow: hidden;
+    width: 200px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
     text-align: center;
-    font-size: 24px;
 }
