--- a/css/leaderboard.css
+++ b/css/leaderboard.css
@@ -3,16 +3,15 @@
 }
 
 table {
-    max-width: 50%;
+    width: 100%;
+    /* Adjust the width as needed */
     border-collapse: collapse;
 }
 
-td,
-th {
-    max-width: 200px;
-    overflow: hidden;
-    width: 200px;
-    text-overflow: ellipsis;
-    white-space: nowrap;
+th,
+td {
+    border: 5px solid rgb(54, 54, 54);
+    padding: 40px;
     text-align: center;
+    font-size: 24px;
 }
