--- a/css/leaderboard.css
+++ b/css/leaderboard.css
@@ -1,4 +1,4 @@
-#footerSpace{
+#footerSpace {
     padding-bottom: 200px;
 }
 
@@ -14,4 +14,12 @@ td {
     padding: 40px;
     text-align: center;
     font-size: 24px;
+}
+
+#tableContainer th:nth-child(2),
+#tableContainer td:nth-child(2) {
+    max-width: 200px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
