--- a/css/leaderboard.css
+++ b/css/leaderboard.css
@@ -10,10 +10,20 @@
 
 #tableContainer th,
 td {
-    border: 5px solid rgb(54, 54, 54);
     padding: 40px;
     text-align: center;
     font-size: 24px;
-    max-width: 125px;
+}
+
+#tableContainer th:nth-child(2),
+#tableContainer td:nth-child(2) {
+    max-width: 200px;
+    
+    overflow: hidden;
+    
+    text-overflow: ellipsis;
+    
+    white-space: nowrap;
+    
 }
 
