--- a/css/leaderboard.css
+++ b/css/leaderboard.css
@@ -28,9 +28,22 @@ td {
 }
 
 #sortButton, #resetButton{
-    font-size: 2rem;
-    padding: 20px;
-    margin: 0px 2% 0px 2%;
+    margin-right: 10px;
+    font-size: 2.3rem;
+    padding: 8px 16px;
+    background-color: #4caf50;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    box-shadow: 0 0 5px rgb(76, 175, 80);
+}
+
+
+#sortButton:hover, #resetButton:hover {
+    background-color: #bc1621;
+    box-shadow: 0 0 5px rgb(255, 0, 0);
+
 }
 
 .buttonsContainer{
