--- a/css/main.css
+++ b/css/main.css
@@ -82,6 +82,14 @@ main {
     text-decoration: none;
 }
 
+.frontPage .descriptionIndex {
+  color: #040404;
+    font-size: 2.7rem;
+    width: 65%;
+    font-style: italic;
+    margin: 3% 0px 3% 0px;
+}
+
 #buttonStart:hover{
   background: linear-gradient(45deg, rgb(79, 187, 241), rgb(14, 4, 4));
 
