--- a/css/header.css
+++ b/css/header.css
@@ -3,8 +3,8 @@
 *, *::before, *::after {
   font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 62.5%;
-  margin: -2px;
-  padding: 1px;
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
 }
 
