--- a/css/header.css
+++ b/css/header.css
@@ -107,7 +107,7 @@ body {
     display: block;
     width: 50px;
     height: 50px;
-    background-image: url('/images/burger-menu.png');
+    background-image: url('./images/burger-menu.png');
     background-size: cover;
   }
 
