--- a/css/leaderboard.css
+++ b/css/leaderboard.css
@@ -3,7 +3,6 @@
 }
 
 #tableContainer table {
-    width: 100%;
     border-collapse: collapse;
 }
 
@@ -15,8 +14,9 @@ td {
 }
 
 #tableContainer {
-    width: 50%;
+    width: 100%;
     margin: 2% auto;
+    overflow: auto;
 }
 
 #tableContainer th:nth-child(2),
@@ -58,3 +58,19 @@ main h1{
     margin: 2% 0px 2% 0px;
 }
 
+@media only screen and (max-width: 1192px) {
+#tableContainer th,
+    td {
+        
+        font-size: 18px;
+    }
+}
+
+@media only screen and (max-width: 768px) {
+    #tableContainer th,
+        td {
+            padding: 40px;
+            text-align: center;
+            font-size: 14px;
+        }
+}
