--- a/css/main.css
+++ b/css/main.css
@@ -13,7 +13,6 @@ main {
   color: #34516c;
   font-weight: 650;
   font-size: 6rem;
-  width: 65%;
   margin: 3% 0px 3% 0px;
 }
 
@@ -69,6 +68,10 @@ main {
 .frontPage p {
   font-size: 1.7rem;
 }
+.frontPage {
+  margin: 0px 2% 0px 2%;
+  width: 65%;
+}
 
 .frontPage #buttonStart {
     padding: 15px 25px;
@@ -78,16 +81,15 @@ main {
     border-radius: 10px;
     cursor: pointer;
     box-shadow: 0 0 5px rgb(79, 187, 241);
-    font-size: 37px;
+    font-size: 3rem;
     text-decoration: none;
 }
 
 .frontPage .descriptionIndex {
   color: #040404;
     font-size: 2.7rem;
-    width: 65%;
     font-style: italic;
-    margin: 3% 0px 3% 0px;
+    margin: 3% 0px 100px 0px;
 }
 
 #CameraButton, #SwitchCameraButton{
@@ -223,6 +225,7 @@ main {
   margin: 5px;
   width: 275px;
 }
+
 
 #SeenQuestion {
   display: none;
