--- a/css/main.css
+++ b/css/main.css
@@ -255,6 +255,29 @@ footer {
   height: 175px
 }
 
+
+.progress-bar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  height: 20px;
+}
+
+.progress-bar-line {
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  background-color: #ddd;
+}
+
+.progress-bar-point {
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  background-color: #ddd;
+}
+
 @media only screen and (max-width:1192px) {
 
   .frontPage h1,
