--- a/css/main.css
+++ b/css/main.css
@@ -257,18 +257,17 @@ footer {
 
 
 .progress-bar {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 100%;
-  height: 20px;
+  width: 20px;
+  height: 300px;
+  background-color: #ddd;
+  position: relative;
 }
 
 .progress-bar-line {
   position: absolute;
+  bottom: 0;
   width: 100%;
-  height: 2px;
-  background-color: #ddd;
+  background-color: green;
 }
 
 .progress-bar-point {
