--- a/css/main.css
+++ b/css/main.css
@@ -257,10 +257,25 @@ footer {
 
 
 .progress-bar {
-  width: 20px;
-  height: 300px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  height: 20px;
+}
+
+.progress-bar-line {
+  position: absolute;
+  width: 100%;
+  height: 2px;
   background-color: #ddd;
-  position: relative;
+}
+
+.progress-bar-point {
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  background-color: #ddd;
 }
 
 #point-1,
@@ -278,19 +293,6 @@ footer {
   font-size: 12px;
 }
 
-.progress-bar-line {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  background-color: green;
-}
-
-.progress-bar-point {
-  width: 10px;
-  height: 10px;
-  border-radius: 50%;
-  background-color: #ddd;
-}
 
 @media only screen and (max-width:1192px) {
 
