--- a/css/main.css
+++ b/css/main.css
@@ -275,6 +275,21 @@ footer {
   background-color: #ddd;
 }
 
+#point-1,
+#point-2,
+#point-3,
+#point-4,
+#point-5,
+#point-6 {
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 12px;
+}
+
 .progress-bar-point {
   width: 10px;
   height: 10px;
