--- a/css/main.css
+++ b/css/main.css
@@ -292,9 +292,18 @@ footer {
 
 .progress-bar-point {
   width: 10px;
+  position: relative;
   height: 10px;
   border-radius: 50%;
   background-color: #ddd;
+}
+
+.progress-bar-point::before {
+  content: attr(data-number);
+  position: absolute;
+  top: -20px;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 @media only screen and (max-width:1192px) {
