--- a/css/main.css
+++ b/css/main.css
@@ -287,7 +287,8 @@ footer {
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 12px;
+  font-size: 22px;
+  font-weight: 600;
 }
 
 .progress-bar-point {
