--- a/css/header.css
+++ b/css/header.css
@@ -75,7 +75,7 @@
 }
 
 body {
-  background-image: url(/images/background.jpg);
+  background-image: url("/Treasure-Hunt-Web-App/images/background.jpg");
   background-size: cover;
   background-attachment: fixed
 }
@@ -106,7 +106,7 @@ body {
     display: block;
     width: 50px;
     height: 50px;
-    background-image: url(/images/burger-menu.png);
+    background-image: url("/Treasure-Hunt-Web-App/images/burger-menu.png");
     background-size: cover
   }
 
