--- a/css/main.css
+++ b/css/main.css
@@ -152,7 +152,17 @@ main {
 }
 
 #disableButton{
+  margin-top: 20px;
   font-size: 1.5rem;
+  background-color: #4caf50;
+    border: 0;
+    border-radius: 4px;
+    box-shadow: 0 0 5px #4caf50
+}
+
+#disableButton:hover{
+  background-color: #bc1621;
+    box-shadow: 0 0 5px red
 }
 
 .PersonInfoPanel input[type=button],
