--- a/css/main.css
+++ b/css/main.css
@@ -153,7 +153,8 @@ main {
 
 #disableButton{
   margin-top: 20px;
-  font-size: 1.5rem;
+  font-size: 1.8rem;
+  padding: 10px;
   background-color: #4caf50;
     border: 0;
     border-radius: 4px;
