--- a/css/main.css
+++ b/css/main.css
@@ -139,31 +139,18 @@ main {
   cursor: pointer
 }
 
-.PersonInfoPanel button {
+.PersonInfoPanel button,
+#disableButton {
   background-color: #4caf50;
   border: 0;
   border-radius: 4px;
-  box-shadow: 0 0 5px #4caf50
+  box-shadow: 0 0 5px #4caf50;
 }
 
-.PersonInfoPanel button:hover {
+.PersonInfoPanel button:hover,
+#disableButton:hover {
   background-color: #bc1621;
-  box-shadow: 0 0 5px red
-}
-
-#disableButton{
-  margin-top: 20px;
-  font-size: 1.8rem;
-  padding: 10px;
-  background-color: #4caf50;
-    border: 0;
-    border-radius: 4px;
-    box-shadow: 0 0 5px #4caf50
-}
-
-#disableButton:hover{
-  background-color: #bc1621;
-    box-shadow: 0 0 5px red
+  box-shadow: 0 0 5px red;
 }
 
 .PersonInfoPanel input[type=button],
