--- a/css/main.css
+++ b/css/main.css
@@ -143,12 +143,13 @@ main {
   background-color: #4caf50;
   border: 0;
   border-radius: 4px;
-  box-shadow: 0 0 5px #4caf50
+  box-shadow: 0 0 5px #4caf50;
+  font-size: 2rem;
 }
 
 .PersonInfoPanel button:hover {
   background-color: #bc1621;
-  box-shadow: 0 0 5px red
+  box-shadow: 0 0 5px red;
 }
 
 #disableButton{
